--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-helmet": "6.0.0",
     "react-hook-form": "5.6.3",
     "react-scripts": "3.0.1",
     "react-table": "7.0.4",
